--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
     "motion": "^12.23.26",
-    "next": "16.0.8",
-    "react": "19.2.1",
-    "react-dom": "19.2.1",
+    "next": "^16.0.10",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
