--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,12 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
+# Ignore all env files
 .env*
+
+# But keep the example file
+!.env.example
+
 
 # vercel
 .vercel
