--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "lucide-react": "^0.556.0",
     "motion": "^12.23.26",
     "next": "^16.0.10",
+    "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "ws": "^8.18.3"
   },
