--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,3 +5,14 @@
   [assets]
   directory = ".open-next/assets"
   binding = "ASSETS"
+  [observability]
+[observability.logs]
+enabled = true
+head_sampling_rate = 1
+invocation_logs = true
+persist = true
+
+[observability.traces]
+enabled = false
+persist = true
+head_sampling_rate = 1
