--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,5 @@
   main = ".open-next/worker.js"
-  name = "baitai-fe"
+  name = "baitai-fe-test"
   compatibility_date = "2025-12-27"
   compatibility_flags = ["nodejs_compat"]
   [assets]
