--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,11 +4,15 @@
   "name": "baitai-fe",
   "compatibility_date": "2025-12-30",
   "compatibility_flags": [
-    "nodejs_compat"
+    "nodejs_compat",
+    "nodejs_compat_populate_process_env"
   ],
   "assets": {
     "directory": ".open-next/assets",
     "binding": "ASSETS"
+  },
+  "vars": {
+    "NEXT_PUBLIC_API_URL":"https://api.baitai.com"
   },
   "observability": {
     "logs": {
