--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -10,6 +10,9 @@
     "directory": ".open-next/assets",
     "binding": "ASSETS"
   },
+  "vars": {
+    "NEXT_PUBLIC_API_URL": "https://api.baitai.club"
+  },
   "observability": {
     "logs": {
       "enabled": true,
