--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -12,7 +12,7 @@
     "binding": "ASSETS"
   },
   "vars": {
-    "NEXT_PUBLIC_API_URL":"https://api.baitai.com"
+    "NEXT_PUBLIC_API_BASE_URL":"https://api.baitai.club"
   },
   "observability": {
     "logs": {
