--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.556.0",
     "motion": "^12.23.26",
     "next": "^16.0.10",
+    "next-firebase-auth-edge": "^1.11.1",
     "next-themes": "^0.4.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
