--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareEnv cloudflare-env.d.ts"
   },
   "dependencies": {
+    "@foobar404/wave": "^2.0.5",
     "@opennextjs/cloudflare": "^1.14.7",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
