subdomain for company routes and interview invite

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,7 @@ AUTH_COOKIE_NAME=AuthToken
 AUTH_COOKIE_SIGNATURE_KEY_CURRENT=generate-a-random-secret-key-at-least-32-characters-long
 AUTH_COOKIE_SIGNATURE_KEY_PREVIOUS=generate-another-random-secret-key-for-key-rotation
 USE_SECURE_COOKIES=false  #Set to true in production (HTTPS). Controls the 'secure' flag in auth cookies
+
+# Domain Configuration (for subdomain routing)
+# Example: baitai.club (without https:// or www)
+NEXT_PUBLIC_ROOT_DOMAIN=localhost:3000
