--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "next": "^16.0.10",
     "next-firebase-auth-edge": "^1.11.1",
     "next-themes": "^0.4.6",
+    "posthog-js": "^1.347.2",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-lite-youtube-embed": "^3.3.3",
