--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.20.0",
+    "@codemirror/commands": "^6.10.2",
     "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.39.14",
     "@foobar404/wave": "^2.0.5",
     "@opennextjs/cloudflare": "^1.14.7",
     "@radix-ui/react-checkbox": "^1.3.3",
